# Crypton

./: .gitignore  README.md  compile_flags.txt  meson.build
libsodium/window_x86_64/: sodium.lib
src/: compile_flags.txt  fencrypt_ui.c  list.c  main.c
src/encrypter/: encrypter.c
src/include/: encrypter.h  file_util.h  list.h  nuklear.h  nuklear_sdl_renderer.h  password_input.h  resources.c  stb_to_sdl.h
src/utils/: file_util.c
